// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fetch historical balances 2`] = `
[
  {
    "_id": "1504224000000",
    "_rev": "1-4759ea778440146803dfbca6850ca404",
    "coinmama:BTC": "0.035979259",
    "timestamp": 1504224000000,
  },
  {
    "_id": "1504310400000",
    "_rev": "1-530d6abc7b1e2a0bd3e04e48b9df8a79",
    "coinmama:BTC": "0.035979259",
    "timestamp": 1504310400000,
  },
  {
    "_id": "1504396800000",
    "_rev": "1-88a5a912e171a566b1666cb75d71d798",
    "coinmama:BTC": "0.035979259",
    "timestamp": 1504396800000,
  },
  {
    "_id": "1504483200000",
    "_rev": "1-b19e14f1d6fcdd5d276aa77ce2ab8afe",
    "coinmama:BTC": "0.035979259",
    "timestamp": 1504483200000,
  },
  {
    "_id": "1504569600000",
    "_rev": "1-dc1e59b9d89bb48f5c386064b243d9e4",
    "coinmama:BTC": "0.035979259",
    "timestamp": 1504569600000,
  },
  {
    "_id": "1504656000000",
    "_rev": "1-8fe21ea5906bb5fb27cd93deeca92dbc",
    "coinmama:BTC": "0.035979259",
    "timestamp": 1504656000000,
  },
  {
    "_id": "1504742400000",
    "_rev": "2-d1b8a87edca81539960d5031c162090b",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1504742400000,
  },
  {
    "_id": "1504828800000",
    "_rev": "2-8f4cf9726bf38e155a82efa50df3ea2e",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1504828800000,
  },
  {
    "_id": "1504915200000",
    "_rev": "2-6af42c3a0710c3a19d35e9edd01247c0",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1504915200000,
  },
  {
    "_id": "1505001600000",
    "_rev": "2-19b3655541fc70050206583e1e281be1",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1505001600000,
  },
  {
    "_id": "1505088000000",
    "_rev": "2-b372cbb82b709b2651c44c32cf383624",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1505088000000,
  },
  {
    "_id": "1505174400000",
    "_rev": "2-cd61a39de53c2fe7016d824d8119be68",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1505174400000,
  },
  {
    "_id": "1505260800000",
    "_rev": "2-c44e6a8f7dec3c052db0ca6ad6fd8d1c",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1505260800000,
  },
  {
    "_id": "1505347200000",
    "_rev": "2-fab6c9872513e63dc8eb9227904a113c",
    "coinmama:BTC": "0.072958518",
    "timestamp": 1505347200000,
  },
]
`;

exports[`should fetch latest balances with price data 1`] = `
[
  {
    "_id": "1505347200000_coinmama:BTC",
    "assetId": "coinmama:BTC",
    "balance": "0.072958518",
    "balanceN": 0.072958518,
    "price": {
      "close": 3250.4,
      "high": 3923,
      "low": 3230.05,
      "open": 3855.61,
      "time": 1505347200,
      "value": 3250.4,
      "volume": 36363.92501211,
    },
    "value": 237.1443669072,
  },
]
`;

exports[`should fetch latest balances without price data 1`] = `
[
  {
    "_id": "1505347200000_coinmama:BTC",
    "assetId": "coinmama:BTC",
    "balance": "0.072958518",
    "balanceN": 0.072958518,
    "price": undefined,
    "value": undefined,
  },
]
`;

exports[`should have balances computed 1`] = `
[
  {
    "_id": "2675435331_3604660326_0",
    "_rev": "3-032b56a414faee58eb34327ac6446cf8",
    "assetId": "coinmama:BTC",
    "balance": "0.072958518",
    "balanceN": 0.072958518,
    "change": "0.036979259",
    "changeN": 0.036979259,
    "importId": "2675435331",
    "importIndex": 0,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504789876000,
    "wallet": "Coinmama Spot",
  },
  {
    "_id": "2675435331_1607323056_0",
    "_rev": "2-d00a502ab3714f426eaf0cfb7ffaae87",
    "assetId": "coinmama:BTC",
    "balance": "0.035979259",
    "balanceN": 0.035979259,
    "change": "0.035979259",
    "changeN": 0.035979259,
    "importId": "2675435331",
    "importIndex": 1,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504267876000,
    "wallet": "Coinmama Spot",
  },
]
`;

exports[`should not have balances computed 1`] = `
[
  {
    "_id": "2675435331_3604660326_0",
    "_rev": "1-bb729489410e2b1eaeb13ea0dce56de2",
    "assetId": "coinmama:BTC",
    "change": "0.036979259",
    "changeN": 0.036979259,
    "importId": "2675435331",
    "importIndex": 0,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504789876000,
    "wallet": "Coinmama Spot",
  },
  {
    "_id": "2675435331_1607323056_0",
    "_rev": "1-ddac1c3a5760c7c24cdded4f411964a6",
    "assetId": "coinmama:BTC",
    "change": "0.035979259",
    "changeN": 0.035979259,
    "importId": "2675435331",
    "importIndex": 1,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "timestamp": 1504267876000,
    "wallet": "Coinmama Spot",
  },
]
`;
